examples/failure-cases/syntax-error/settings.gradle.kts
rootProject.name = "syntax-error"

pluginManagement {
    repositories {
        mavenLocal()
    }
}
